<resources>
    <string name="app_name">CyTrack</string>
    <string name="cycling_stats">Statistics</string>
    <string name="map">Map</string>
    <string name="add_ride">Add ride</string>
    <string name="assignment">Provided by AbandonedStudio</string>
    <string name="cycling">Cycling</string>
    <string name="ridding">Ridding</string>
    <string name="running">Running</string>
    <string name="cycling_motivation">Boost your performance</string>
    <string name="distance">Distance</string>
    <string name="km">km</string>
    <string name="kmh">km/h</string>
    <string name="time">Time</string>
    <string name="time_pattern">hh:mm</string>
    <string name="date_pattern">dd/mm/yyyy</string>
    <string name="add">Add</string>
    <string name="destination">Destination</string>
    <string name="enter_destination">Where have you been?</string>
    <string name="cycling_add_dialog_title">You want to add:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cycling_add_ride_date_picker_title">Pick a ride date</string>
    <string name="avg_speed_title">Avg. speed</string>
    <string name="avg_speed_content">00,00</string>
    <string name="total_distance_title">Total distance</string>
    <string name="total_distance_content">000,00</string>
    <string name="total_time_title">Total time</string>
    <string name="total_time_content">00:00</string>
    <string name="most_frequent_dest_title">Most freq. dest.</string>
    <string name="location_permissions">Location permissions are necessary to track your training properly</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="confirm_canceling_tracking">Do your really want to cancel ride without saving?</string>
    <string name="title_activity_cycling">CyclingActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="button_desc_cancel_tracking">cancel tracking without saving to db</string>
    <string name="main_activity_navigate_to_settings">navigate to settings</string>
    <string name="best_tracking_desc">Best tracking precision, biggest battery consumption</string>
    <string name="three_second_period">3 sec.</string>
    <string name="seven_second_period">7 sec.</string>
    <string name="twelve_second_period">12 sec.</string>
    <string name="medium_tracking_desc">Medium tracking precision, medium battery consumption</string>
    <string name="worst_tracking_desc">Worst tracking precision, smallest battery consumption</string>
    <string name="settings">Settings</string>
    <string name="description">Description</string>
    <string name="tracking_period_setting_desc">Choose location update time:</string>
    <string name="save">Save</string>
    <string name="main_settings_label">Main settings</string>
    <string name="settings_saved">Settings saved</string>
    <string name="year">Year</string>
    <string name="year_by_year">Year-by-year</string>
    <string name="calendar">Calendar</string>
    <string name="days">days</string>
    <string name="active_days">Active days</string>
    <string name="img_cycling_img_desc">screenshot from tracking fragment</string>
    <string name="no_rides">No rides od this day</string>
    <string name="confirm_delete">Do you really want to delete this ride?</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="loading_map">Loading map</string>

</resources>