<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/transparent"
    app:cardCornerRadius="8dp"
    app:cardElevation="16dp">
    <!--    tools:backgroundTint="@android:color/holo_blue_dark">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/year_textView"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/year"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/duration_cycling_year_item_textView"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/total_time_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/distance_cycling_year_item_textView"
            app:layout_constraintTop_toBottomOf="@+id/year_textView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/distance_cycling_year_item_textView"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance_content"
            app:layout_constraintEnd_toStartOf="@+id/duration_cycling_year_item_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/avg_speed_cycling_year_item_textView"
            app:layout_constraintTop_toTopOf="@+id/duration_cycling_year_item_textView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/avg_speed_cycling_year_item_textView"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_speed_content"
            app:layout_constraintEnd_toStartOf="@+id/distance_cycling_year_item_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/distance_cycling_year_item_textView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/most_freq_dest_cycling_year_item_textView"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/active_days_cycling_item_textView"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView14"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/avg_speed_title"
            app:layout_constraintEnd_toEndOf="@+id/avg_speed_cycling_year_item_textView"
            app:layout_constraintStart_toStartOf="@+id/avg_speed_cycling_year_item_textView"
            app:layout_constraintTop_toBottomOf="@+id/avg_speed_cycling_year_item_textView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView15"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance_title"
            app:layout_constraintEnd_toEndOf="@+id/distance_cycling_year_item_textView"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/distance_cycling_year_item_textView"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView16"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_time_title"
            app:layout_constraintEnd_toEndOf="@+id/duration_cycling_year_item_textView"
            app:layout_constraintStart_toStartOf="@+id/duration_cycling_year_item_textView"
            app:layout_constraintTop_toBottomOf="@+id/duration_cycling_year_item_textView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView17"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/destination"
            app:layout_constraintEnd_toEndOf="@+id/most_freq_dest_cycling_year_item_textView"
            app:layout_constraintStart_toStartOf="@+id/most_freq_dest_cycling_year_item_textView"
            app:layout_constraintTop_toBottomOf="@+id/most_freq_dest_cycling_year_item_textView" />

        <View
            android:id="@+id/view3"
            style="@style/Divider"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/active_days_cycling_item_textView"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            app:layout_constraintEnd_toStartOf="@+id/most_freq_dest_cycling_year_item_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/most_freq_dest_cycling_year_item_textView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView19"
            style="@style/BlackTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_days"
            app:layout_constraintEnd_toEndOf="@+id/active_days_cycling_item_textView"
            app:layout_constraintStart_toStartOf="@+id/active_days_cycling_item_textView"
            app:layout_constraintTop_toTopOf="@+id/textView17" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>