<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cycling_background"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/year_summary_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:itemCount="1"
                tools:listitem="@layout/cycling_stats_year_item" />

            <View
                android:id="@+id/view5"
                style="@style/Divider"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/all_tracks_constraintLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/all_tracks_constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/most_frequent_dest_title"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="@+id/most_frequent_destination_textView"
                    app:layout_constraintStart_toStartOf="@+id/most_frequent_destination_textView"
                    app:layout_constraintTop_toBottomOf="@+id/most_frequent_destination_textView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/avg_speed_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/avg_speed_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/avg_speed_title"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="@+id/avg_speed_textView"
                    app:layout_constraintStart_toStartOf="@+id/avg_speed_textView"
                    app:layout_constraintTop_toBottomOf="@+id/avg_speed_textView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/total_distance_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_distance_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/avg_speed_textView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_distance_title"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="@+id/total_distance_textView"
                    app:layout_constraintStart_toStartOf="@+id/total_distance_textView"
                    app:layout_constraintTop_toBottomOf="@+id/total_distance_textView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/total_time_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/total_time_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_time_title"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="@+id/total_time_textView"
                    app:layout_constraintStart_toStartOf="@+id/total_time_textView"
                    app:layout_constraintTop_toBottomOf="@+id/total_time_textView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/most_frequent_destination_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/total_time_textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView7"
                style="@style/BlackTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/year_by_year"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView9"
                style="@style/BlackTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/calendar"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year_summary_recyclerView" />

            <DatePicker
                android:id="@+id/cycling_stats_datePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/design_default_color_primary_dark"
                android:datePickerMode="calendar"
                android:headerBackground="#0641c2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rides_in_day_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cycling_stats_datePicker"
                tools:itemCount="3"
                tools:listitem="@layout/cycling_ride_in_day_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>